# Orgument

./: Cargo.toml
src/: audio.rs  main.rs  parser_org.rs  score.rs
src/processing/: element.rs  flow.rs  flow_store.rs  mod.rs  processor.rs  store.rs
src/processing/prim_element/: constant.rs  mod.rs  pure.rs  sine_osc.rs
src/ui/: effect.rs  keymapper.rs  mod.rs
