[package]
name = "orgument"
version = "0.1.0"
authors = ["arrow-world <33681764+arrow-world@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsp-chain = "0.13.1"
portaudio = "0.7.0"
nom = "5.1.2"
iced = "0.1.1"
iced_native = "0.2.2"