[package]
name = "orgument"
version = "0.1.0"
authors = ["arrow-world <33681764+arrow-world@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portaudio = "0.7.0"
nom = "5.1.2"
iced = "0.1.1"
iced_native = "0.2.2"
daggy = {version = "0.7.0", features = ["stable_dag"]}
linear-map = "1.2.0"
intmap = "0.7.0"
sample = "0.11.0"
num = "0.3.0"
matches2 = "1.2.1"